Increase z-index of global controls when fixed so mobile users don't get stuck with fixed controls

--- a/sass/_controls-panel-layout.scss
+++ b/sass/_controls-panel-layout.scss
@@ -16,6 +16,9 @@
 	.global-controls-panel{
 		left: 0;
 		width: 300px;
+		//so on mobile screens with this activated
+		//we can still get to global controls to de-activate it
+		z-index: 1000;
 	}
 	.super-dither-controls-container{
 		right: 0;
